# plataforma-geobot

./: .env.example  .flaskenv  .gitignore  .secrets.local.toml  COMANDOS_UTEIS.sh  Dockerfile  QUICKSTART.md  README.md  alembic.ini  app.py  docker-compose.yml  manage_db.py  package-lock.json  package.json  pyproject.toml  settings.local.toml  settings.toml  test_auth.py
backend/: .dockerignore  .gitattributes  .gitignore  .secrets.toml  .secrets.toml.example  COMANDOS_TESTES.sh  COMANDOS_UTEIS.sh  Dockerfile  README.md  app.py  docker-compose.yml  estrutura_projeto.txt  migrar_testes.py  migrate_to_schema.py  pyproject.toml  pytest.ini  settings.toml  test_auth.py  test_me_endpoint.py  test_setup.py  verify_schema_migration.py
backend/alembic/: env.py
backend/alembic/versions/: 20251101_1736_56e34b10d275_update_categoria_denuncia_enum.py  20251101_1800_05d51b29fa7d_fix_denuncia_enum_reference.py  20251101_1805_a796616d1346_fix_status_and_prioridade_enums.py  20251111_1502_d5e9f8a1b2c3_move_tables_to_geobot_schema.py  20251112_0000_create_etapas_fiscalizacao_tables.py  20251112_1700_fix_fiscalizacao_enums.py  20251112_2010_seed001_seed_superuser_and_permissions.py  20251112_2030_fix_status_fiscalizacao_enum.py  20251113_0000_session_management.py  20251114_1045_e8f9a2b3c4d5_add_many_to_many_usuario_fiscalizacao.py
backend/src/geobot_plataforma_backend/: app_fastapi.py
backend/tests/: README.md  __init__.py  conftest.py
backend/tests/integration/: test_auth.py  test_denuncias.py
backend/tests/legacy/: test_auth.py
backend/tests/unit/: test_denuncia_dtos.py  (+2 more)
(+153 files in other folders)
