[project]
name = "geobot-plataforma-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Álvaro Souza Oliveira",email = "66275077+alvaroxsouza@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic (>=1.17.1,<2.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "dynaconf (>=3.2.12,<4.0.0)",
    "pyjwt (>=2.8.0,<3.0.0)",
    "bcrypt (>=4.1.0,<5.0.0)",
    "email-validator (>=2.1.0,<3.0.0)",
    # FastAPI dependencies (adicionadas para migração de Flask -> FastAPI)
    "fastapi (>=0.95.0,<1.0.0)",
    "uvicorn (>=0.22.0,<1.0.0)",
    "pydantic (>=1.10.7,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    # Testing dependencies
    "pytest (>=7.4.0,<8.0.0)",
    "pytest-cov (>=4.1.0,<5.0.0)",
    "requests (>=2.31.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
